# Socratic-docs

./: ARCHITECTURE.md  PRODUCTION.md  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  test.yml
docs/: DOCUMENTATION_GENERATION.md
examples/: 01_extract_and_generate.py  02_project_templates.py  03_git_workflow.py
src/socratic_docs/: __init__.py  api_documentation.py  api_documentation_backup.py  artifact_saver.py  code_extractor.py  generator.py  git_initializer.py  markdown.py  multi_file_splitter.py  report_generator.py
src/socratic_docs/extractors/: __init__.py  base.py  generic_extractor.py  models.py  python_extractor.py  registry.py
src/socratic_docs/generation/: __init__.py  documentation_generator.py
tests/: test_documentation_generator.py  test_module_imports.py
