[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socratic-docs"
version = "0.2.0"
description = "Automated documentation generation for projects"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Socratic Team", email = "team@socratic.dev"}
]
keywords = [
    "documentation",
    "generation",
    "automated",
    "sphinx",
    "markdown",
    "api-docs",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = []

[project.optional-dependencies]
# Framework integrations
openclaw = []
langchain = ["langchain>=0.1.0"]
langraph = ["langgraph>=0.0.1"]

# Development
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Nireus79/Socratic-docs"
Repository = "https://github.com/Nireus79/Socratic-docs"
Documentation = "https://github.com/Nireus79/Socratic-docs#readme"
Issues = "https://github.com/Nireus79/Socratic-docs/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
follow_imports = "silent"
